Documentation for user test number 2

--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -3,3 +3,44 @@ Vi har igennem udviklingsprocessen af appen udført X brugertests med Y forskell
 
 \subsection{Brugertest 1}
 Ved den første brugertest, sammen med bruger 1, efter sprint 2, var der ikke meget funktionalitet endnu. Brugertesten foregik ved, at vi forklarede den overordnede idé med appen, samt at den var langt fra færdig, og lod derefter brugeren prøve appen selv. Her var brugeren meget forvirret over, hvorfor hun ikke kunne tilføje flere bed. Det blev dermed tydeligt, at vores navngivning af forskellige dele af en have ikke var korrekt, og at det, vi havde kaldt et "haveområde", skulle omdøbes til et "bed". Den ønskede funktionalitet fra brugeren var nemlig allerede implementeret, men ikke intuitiv.
+
+\subsection{Brugertest 2}
+
+Ved den anden brugertest, sammen med bruger 1, efter sprint 5, blev brugertesten udført som en tænke-højt-test, hvor brugeren sagde, hvad hun tænkte om forskellige dele af appen.
+Brugeren gav udtryk for en masse forbedringsmuligheder, som alle sammen kan ses i bilag nr XXXX. En af hovedpointerne var, at der skulle flere forklainger til siderne. Hun var lidt forvirret over hvad hun skulle på den enkelte side i mange tilfælde, så det valgte vi at fokusere på at gøre bedre fremadrettet.
+Der blev også efterspurgt feedback på nogle af knapperne, som på det tidspunkt ikke viste hvad der skete når man trykkede på f.eks. "Vand"- og "Høst"-knapperne.
+
+Brugeren efterspurgte også at kunne indtaste hvornår hun har sået eller plantet den enkelte plante, og kunne godt tænke sig at kunne indtaste andre personlige notater til planten - f.eks. sort, hvilken leverandør der er blevet brugt og andre ting til den pågældende plante.
+
+Brugeren ville gerne kunne lave sine egne planter, i tilfælde af at vores app ikke havde data om den fra start. Her udtrykte brugeren at hun gerne ville kunne indtaste:
+
+\begin{itemize}
+    \item Navnet på planten
+    \item Sorten
+    \item Hvornår den kan plantes eller forkultiveres
+    \item Sådybde
+    \item Afstand mellem planter
+    \item Hvor meget lys planten skal have
+    \item Hvor meget vand den skal have
+    \item Hvor meget og hvad for noget gødning skal den bruge
+    \item Forventet cirka høst-tidspunkt
+    \item Temperaturen den skal gro i
+    \item Kan den plantes udendørs eller i drivhus --- eller begge dele?
+    \item Hvilken jordtype passer planten i
+\end{itemize}
+
+Det er ikke alle disse oplysninger vi har valgt at tage med, men brugeren har et notes-felt, hvor de kan indtaste alle de oplysninger, som de ønsker.
+
+Der blev også kommenteret på vores valg af ikoner, som hun synes var lidt forvirrende og derfor ikke helt vidste, hvad de refererede til. Her var det primært vores udendørs-ikon, som blev forvekslet med en have og ikke så meget en køkkenhave, og brugeren troede derfor ikke hun kunne lave et køkkenhave-bed før hun læste titlerne til hvert ikon.
+
+Brugeren kunne godt tænke sig at kunne holde styr på en to-do liste, som gerne skal kunne kategoriseres efter hvilken aktivitet hun skal udføre. Til denne del nævnte brugeren også, at hun gerne ville kunne holde styr på generelle noter om f.eks. leverandører eller hvilke sorter hun synes er gode, inde i appen, så hun ikke skal skifte app for at se disse.
+
+Efter brugertesten snakkede vi om frø-poser og har tilføjet idéen om at bruge dem til at lave nye planter, så brugeren kan blot tage et billede af en frø-pose og så bliver det gemt i appen.
+
+Afslutningsvis lavede vi en prioriteret liste over de vigtigste ting, som brugeren gerne ville have med i appen og fik følgende prioritering:
+
+\begin{enumerate}
+    \item Guide / forklarende overskrifter og tekst
+    \item Tilføj egne planter og sorter, samt at kunne give sådato, data om forkultivering, noter mv.
+    \item Todo-liste og generelle noter
+\end{enumerate}
