Updated to new colors in report

--- a/report/design.tex
+++ b/report/design.tex
@@ -15,23 +15,16 @@ Appen bruger skrifttypen Roboto Condensed \footcite{roboto-condensed} til al tek
 
 \subsubsection*{Farver}
 
-Farverne er valgt med udgangspunkt i farver som man tit møder, når man arbejder med planter. F.eks. repræsenterer grøn planter og jordfarverne potter og jord.
+Farverne tager udgangspunkt i farver som man tit møder, når man arbejder med planter. F.eks. repræsenterer grøn planter og jordfarverne potter og jord.
+
+Begge farveskemaer er udvalgt af en professionel xxxx, og vi har valgt at bruge det øverste, for at have lidt varmere toner i appen.
 
 \begin{figure}[H]
-    \label{primære-farver}
+    \label{farver}
     \centering
     \includegraphics[width=0.7\textwidth]{img/colors.png}
-    \caption{Primære appfarver}
+    \caption{Appfarver}
 \end{figure}
-
-\begin{figure}[H]
-    \label{sekundære-farver}
-    \centering
-    \includegraphics[width=0.7\textwidth]{img/extra-colors.png}
-    \caption{Ekstra appfarver}
-\end{figure}
-
-Til hhv. vand og stjerner
 
 \subsubsection*{Textstørrelser}
 
