--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,6 @@
     <string name="germinated_boolean_text">Forspiret</string>
     <string name="germinated_true_text">Forspiret</string>
     <string name="germinated_false_text">Ikke forspiret</string>
-    <string name="add_germination_text">Sæt forspiringsstatus</string>
-    <string name="edit_germination_text">Ændr forspringsstatus</string>
+    <string name="add_germination_text">Sæt forspiring</string>
+    <string name="edit_germination_text">Ændr forspiring</string>
 </resources>
