--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,12 +34,12 @@
     <string name="save">Gem</string>
     <string name="no_name_given_text">Indtast venligst et navn til dit bed</string>
     <string name="create_grid_title">Design dit bed</string>
-    <string name="empty_garden_text">Du har ingen oprettede bed. Tryk på plus-knappen nede i hjørnet for at komme i gang og oprette dine bed</string>
+    <string name="empty_garden_text">Du har ikke oprettet nogen bed.\n\nTryk på plus-knappen nede i hjørnet for at komme i gang og oprette dine bed.</string>
     <string name="garden_with_beds_text">Klik på et af dine bed eller opret et nyt på plus-knappen nede i hjørnet</string>
     <string name="choose_location_text">Vælg lokation</string>
-    <string name="guide_create_grid_text">Udfyld dit bed ved at trykke på en firkant og vælg fra listen. Du kan ændre størrelsen på bedet ved plus- og minus-knapperne</string>
+    <string name="guide_create_grid_text">Udfyld dit bed ved at trykke på en firkant og vælg fra listen.\nDu kan ændre størrelsen på bedet ved plus- og minus-knapperne.</string>
     <string name="plant_details_dialog_title">Hvad har du foretaget dig?</string>
-    <string name="plants_details_dialog_guide_text">Her kan du bogføre, hvis du har vandet eller høstet din plante. Tryk på detaljer for at se mere om din plante.</string>
+    <string name="plants_details_dialog_guide_text">Her kan du bogføre, hvis du har vandet eller høstet din plante.\nTryk på detaljer for at se mere om din plante.</string>
     <string name="register_water_text">Registreret som vandet</string>
     <string name="register_harvest_text">Registreret som høstet</string>
     <string name="edit_sort_text">Redigér sort</string>
