Links in literature

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -13,9 +13,9 @@
 }
 
 @article {
-    naming-convention,
-    title = {AOSP Java Code Style for Contributors},
-    url = {https://source.android.com/setup/contribute/code-style#follow-field-naming-conventions},
+    navigation,
+    title = {Navigation},
+    url = {https://developer.android.com/guide/navigation},
     year = {2020}
 }
 
@@ -51,6 +51,41 @@
     roboto-condensed,
     title = {Roboto Condensed},
     url = {https://fonts.google.com/specimen/Roboto+Condensed},
+    year = {2021}
+}
+
+@article {
+    dmi-api,
+    title = {DMI's Offentlige API},
+    url = {https://confluence.govcloud.dk/display/FDAPI},
+    year = {2021}
+}
+
+@article {
+    app-bar,
+    title = {Regular top app bar},
+    url = {https://material.io/components/app-bars-top/android#regular-top-app-bar},
+    year = {2021}
+}
+
+@article {
+    navigation-drawer,
+    title = {Navigation Drawer},
+    url = {https://material.io/components/navigation-drawer/android},
+    year = {2021}
+}
+
+@article {
+    balloon-library,
+    title = {Skydoves - Balloon},
+    url = {https://github.com/skydoves/Balloon},
+    year = {2021}
+}
+
+@article {
+    aarstiderne,
+    title = {Aarstidernes plante- og så-kalender},
+    url = {https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender},
     year = {2021}
 }
 
