Users can now edit the size and plants of their bed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Toolbar -->
     <string name="toolbar_location">Vælg lokation</string>
     <string name="toolbar_create_grid">Design dit bed</string>
+    <string name="toolbar_edit_grid">Redigér dit bed</string>
 
     <!-- Guides -->
     <string name="help">Hjælp</string>
