NewSeasonFragment.kt saving will return after making sure year not already used

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <!-- New season -->
     <string name="new_season">Ny sæson</string>
     <string name="year">Årstal</string>
+    <string name="already_exists_season">Der findes allerede en sæson med dette årstal</string>
 </resources>
