--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -44,3 +44,29 @@ Afslutningsvis lavede vi en prioriteret liste over de vigtigste ting, som bruger
     \item Tilføj egne planter og sorter, samt at kunne give sådato, data om forkultivering, noter mv.
     \item Todo-liste og generelle noter
 \end{enumerate}
+
+\subsection{Brugertest 3}
+
+Ved tredje brugertest med bruger 1 efter sprint 7, fik vi opklaret nogle uklarheder i forhold til hvordan brugeren ønsker at holde styr på forspiring, samt hvilke detaljer om sine planter hun ønsker at have tilgængelige.
+
+Der blev gjort udtryk for at det var forvirrende at se alle informationer om en plante samlet på en side, så det blev ønsket opdelt i informationer om den specifikke plante og informationer om den overordnede plante generelt. Til det ønskede brugeren at hun kunne indtaste dato for hvornår hun har forspiret en plante og ikke om hvorvidt den er forspiret eller ej.
+
+Brugeren var stadigvæk forvirret over måden som et bed blev illustreret på, fordi hver række i et bed er kvadratiske. Til det foreslog hun, at et bed blev lavet mere aflangt på den ene led, så det er tydeligt at hver firkant er en række (eller en del af en række) og ikke et bed. Hun tilføjede herudover, at hun godt kunne tænke sig at der var plads til minimum fem rækker / kolonner på hver led i et bed.
+
+Vi opdagede at en af de skærmbilleder som brugeren kom til, når hun skulle oprette et nyt bed var ikke lavet til skærmstørrelsen på hendes telefon, og noget af teksten blev derfor ikke vist.
+
+Brugeren gav udtryk for at hun hellere ville have en oversigt over de planter, der er sæson for frem for at få at vide, at der kan plantes planter i hendes bed på nuværende tidspunkt. Denne oversigt blev der lavet en række forslag til hvordan den kunne blive indbygget:
+
+\begin{itemize}
+    \item Kunne blive indbygget i leksikonnet
+    \item Få en separat oversigt over planterne der kan plantes
+    \item En sammenkobling med når man redigerer sine bede - at der her var en form for markering
+\end{itemize}
+
+\subsection{Brugertest 4}
+
+Denne brugertest var mere spontan og i samarbejde med bruger 2. Brugeren gav udtryk for at det ikke er tydeligt hvad et bed repræsenterer - det er meget indforstået. Han ønskede en forklaring til hvad et bed er defineret som i appen. Her kunne man også lave en forklaring til hele appen generelt, så brugeren også får en forståelse for andre dele.
+
+Der blev også gjort udtyk for, at det kunne være en god idé at lade brugeren styre for mange inddelinger af under-bede, som de ønsker, således at det ikke er forhåndsbestemt hvor mange niveauer man ønsker at underinddele sin køkkenhave i.
+
+Han kunne godt tænke sig noget hjælp til hvordan man kan lave specielle former af bed, hvis ens bed nu for eksempel er rundt og ikke firkantet. Det kan godt virke som om at appen kun kan bruges, hvis du har en firkantet køkkenhave.
