--- a/report/dokumentation.tex
+++ b/report/dokumentation.tex
@@ -81,7 +81,7 @@ Man kan se alt data, som er gemt om planten i et "detaljeview" ved at klikke på
 Vi har lavet en oversigt over alle planter, som man kan navigere til ved brug af menuen i bunden af skærmen. Her kan man klikke på ``Planter'' og får vist en liste over planterne. Hvis man vælger en plante, kommer man videre ind og kan se alle informationer, som appen har, om denne plante.
 
 \subsection{Sædskifte}
-I appens side-menu findes en knap til at se 'sædeskifte'. Den tager udgangspunkt i, at man som bruger flytter rundt på sine bed, når man skal udføre sædeskifte. Appen ser derfor på hvor længe et bed har været på samme plads samt hvad sædeskifteintervallet er på den plante, med kortest sædeskifteinterval. I oversigten kan man dermed se hvornår man næste gang skal flytte sit bed for ikke at udpine jorden. 
+I appens side-menu findes en knap til at se 'sædskifte'. Den tager udgangspunkt i, at man som bruger flytter rundt på sine bed, når man skal udføre sædskifte. Appen ser derfor på hvor længe et bed har været på samme plads samt hvad sædskifteintervallet er på den plante, med kortest sædskifteinterval. I oversigten kan man dermed se hvornår man næste gang skal flytte sit bed for ikke at udpine jorden. 
 
 \subsection{Lagring af data}
 
