--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -1,5 +1,5 @@
 \section{Brugertests}
-Vi har igennem udviklingsprocessen af appen udført X brugertests med Y forskellige brugere. Der er blevet udført brugertests på efter følgende sprints med følgende brugere:
+Vi har igennem udviklingsprocessen af appen udført X brugertests med Y forskellige brugere. Der er blevet udført brugertests efter følgende sprints med følgende brugere:
 \begin{itemize}
     \item Sprint 2 - Bruger 1
     \item Sprint 5 - Bruger 1
@@ -64,7 +64,7 @@ Vi opdagede, at et af de skærmbilleder, som brugeren kom til, når hun skulle o
 
 Brugeren var forvirret over vores måde at vise plantbare planter på og synes der manglede forklaring. På det tidspunkt fungerede det ved, at hvis et bed havde tomme felter, foreslog appen nogle planter, der var sæson for lige nu, som man derefter kunne trykke på for at så. Vi foreslog, at det skulle vises på en helt anden måde, hvilket hun syntes godt om. Her tilføjede hun også, at det ikke gav så meget mening at man kunne plante en ny plante direkte i bedet med det samme, da man jo vil så de frø man har. Appen skal derimod give noget information på forhånd, man kan reagere på senere. Den tankegang har vi generelt taget meget til os, og vores fremadrettede syn på appen er, at den skal fungere som visualisering af mange informationer frem for at håndtare og styre alt for dig.
 
-Der blev lavet en række forslag til hvordan denne oversigt  kunne blive indbygget:
+Der blev lavet en række forslag til hvordan denne oversigt kunne blive indbygget:
 \begin{itemize}
     \item Kunne blive indbygget i leksikonnet
     \item Få en separat oversigt over planterne, der kan plantes
@@ -85,3 +85,4 @@ Her noget om:
     \item Vores kravspecifikation inden projektet
     \item Info om sædskifte
 \end{itemize} 
+
