Initial expectations in reflexion

--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -1,1 +1,26 @@
 \section{Refleksion}
+
+\subsection{Indledende forventninger}
+Da vi startede projektet, havde vi følgende forventninger til appens kunnen:
+
+\begin{enumerate}
+    \item Se hvor man har plantet hvilke planter
+    \item Guide dig fuldstændig i alt, hvad du foretager dig i din køkkenhave. Herunder indgår vanding, plantning/såning, forspiring og udplantning, sædskifte og høst
+    \item Oversigter over alle handlinger, der skal udføres
+    \item Understøtte planter indenfor, udenfor og i drivhus
+    \item Understøtte at plante/så direkte i jorden, i potter eller i plantekasser
+    \item Designe sit eget haveområde i appen
+    \item Give dig notifikationer og være integrerbar i kalenderen
+    \item Se historik over vanding og platning
+    \item Lexicon med generel information
+    \item Planlægning af en ny sæson
+\end{enumerate}
+
+\noindent Vi havde følgende ønsker om research og muligvis implementering:
+
+\begin{enumerate}
+    \item Image analysis til at tage billeder af allerede eksisterende haveområder, som appen derefter kan generere design til
+    \item Integration med IoT f.eks. et jord-termometer
+\end{enumerate}
+
+
