--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="tooltip_new_season">Her kan du lave en ny sæson.\n\n Det kan hjælpe appen med at holde styr på sædskifteintervaller\n\n Du kan også bruge det til selv at kigge på dine bedes historikker.</string>
     <string name="tooltip_garden_overview">Tryk på \'udendørs\' for at se alle dine udendørs-bede.\n\n Tryk på \'drivhus\' for at se alle dine bede i dit drivhus</string>
     <string name="tooltip_area_overview">Klik på et bed for at se dine planters placering og oplysninger om dem\n\n Hold inde på et bed og træk i det for at ændre dets placering i forhold til de andre.\n\n Tryk på plus-knappen i hjørnet for at oprette et nyt bed. </string>
+    <string name="tooltip_weather_data">Her kan du se din placering og den dato der sidst er registreret som en regnvejrsdag.\n\nHvis du ikke kan se din lokation eller der står \"Ingen info\", så skyldes det sandsynligvis, at du har slået adgang til lokationsdata fra for appen.</string>
 
     <!-- Titles -->
     <string name="title_location">Hvor er dit bed?</string>
@@ -121,4 +122,6 @@
     <string name="location_permission_rationale">Vil du give adgang til din lokation for at få vejrdata fra dit område?</string>
     <string name="location_permission_denied">Du kan altid slå lokation til i indstillinger, hvis du ønsker</string>
     <string name="location_request_title">Lokationsdata</string>
+    <string name="your_location">Din lokation</string>
+    <string name="you_are_here">Du er her</string>
 </resources>
