Report about calendar integration and minor touch-ups

--- a/report/main.tex
+++ b/report/main.tex
@@ -14,8 +14,6 @@
 \tableofcontents
 \newpage
 
-\input{design}
-\newpage
 \input{brugervejledning}
 \newpage
 \input{brugertests}
@@ -27,6 +25,8 @@
 \input{refleksion}
 \newpage
 \input{sammenligning}
+\newpage
+\input{appendix}
 
 \nocite{*}
 
