--- a/report/process.tex
+++ b/report/process.tex
@@ -1,1 +1,3 @@
 \section{Process}
+Udviklingsprocessen er blevet udført agilt ved hjælp af sprints. Vi har i alt kørt 12 sprints, på hver en uge. I starten af processen, lå fokus meget på at designe og diskutere appen, for at gennemtænke alle features og designvalg på forhånd samt skrive det ned. Det sikrer, at appen holder sin røde tråd, selvom der er flere til at udarbejde den. Denne del resulterede i sketches og wireframs, og en styleguide bestående af skrifttyper, størrelser på tekst og afstande samt farveskemaer. De kan ses i bilag X.
+
