--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -23,4 +23,17 @@ Da vi startede projektet, havde vi følgende forventninger til appens kunnen:
     \item Integration med IoT f.eks. et jord-termometer
 \end{enumerate}
 
+\subsection{Appens egentlige rolle}
+
+\subsection{Appens omfang}
+
+\subsection{Kalenderintegration}
+Da appens egentlige rolle stod mere klart, gik det også op for os, at kalenderintegration ikke gav meget mening at lave. Da appen ikke skulle holde styr på præcist hvilke handlinger, der skulle udføres hvornår, i hvilke bede og med hvilke planter, er der ikke nogen begivenheder, der kan stå i kalenderen. Hvis kalenderen skulle bruges, skulle der være afsat flere dage i træk til f.eks. at vise, at en plante var i sæson. Det vurderede vi ikke gav værdi for brugeren, da kalenderen som regel bruges til at holde styr på begivenheder eller arbejdsopgaver, man skal på et bestemt tidspunkt. Det er ikke en bogholder for hvornår du måske vil gøre noget.
+
+Notifikationer gav stadig mening, da de kan minde brugeren om at tjekke til deres køkkenhave i ny og næ, hvis de ønsker sådanne påmindelser.
+
+\subsection{Image analysis}
+
+\subsection{IoT devices}
+
 
