--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,16 @@
     <string name="drawer_plantables">Planter i sæson</string>
     <string name="no_outdoors_plantables">Der er ingen udendørs planter, der kan sås/plantes i øjeblikket. Se leksikon for alle planter i arkivet</string>
     <string name="no_greenhouse_plantables">Der er ingen drivhusplanter, der kan sås/plantes i øjeblikket. Se leksikon for alle planter i arkivet</string>
+
+    <!-- New Plant -->
+    <string name="earliest_date">Tidligste så-dato</string>
+    <string name="category">Kategori</string>
+    <string name="latest_date">Seneste så-dato</string>
+    <string name="sow_or_plant">Sås eller plantes?</string>
+    <string name="croprotation_in_years">Sædskifterotation i antal år</string>
+    <string name="seeds_per_meter">Antal frø pr. meter række</string>
+    <string name="sowing_depth">Sådybde</string>
+    <string name="distance_rows">Afstand mellem rækker i cm</string>
+    <string name="fertilizer">Gødningsnivau</string>
+    <string name="expected_harvest">Forventet høst pr. række</string>
 </resources>
